--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Home Page</title>
+  <meta name="description" content="Home Page">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
